Fixing spacing

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ h1 {
   font-family: 'Staatliches';
   font-size: 80px;
   margin-top: 8%;
-  text-align: center;
+  margin-left: 10%;
   animation-name: fade;
   animation-duration: 5s;
   animation-iteration-count: infinite;
@@ -21,6 +21,7 @@ h2 {
   text-align: center;
   font-size: 150px;
   line-height: 0.95;
+  margin-top: -10%;
 }
 
 h3 {
@@ -203,6 +204,12 @@ a {
   margin-top: 10%;
   height: 120px;
   width: 120px;
+}
+
+.weatherIcon {
+  display: block;
+  margin-left: 40%;
+  margin-top: 8%;
 }
 
 #celsius {
